tooling/nargo_cli/tests/snapshots/execution_success/global_array_rc_regression_8259/execute__tests__force_brillig_false_inliner_9223372036854775807.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [
      {
        "name": "a",
        "type": {
          "kind": "boolean"
        },
        "visibility": "private"
      }
    ],
    "return_type": {
      "abi_type": {
        "kind": "array",
        "length": 3,
        "type": {
          "kind": "boolean"
        }
      },
      "visibility": "public"
    },
    "error_types": {}
  },
  "bytecode": [
    "func 0",
    "current witness index : _3",
    "private parameters indices : [_0]",
    "public parameters indices : []",
    "return value indices : [_1, _2, _3]",
    "BLACKBOX::RANGE [(_0, 1)] []",
    "EXPR [ (1, _1) -1 ]",
    "EXPR [ (1, _0, _0) (-1, _0) (1, _2) 0 ]",
    "EXPR [ (1, _3) -1 ]"
  ],
  "debug_symbols": "dY/RCoMwDEX/Jc99sA/bwF8ZQ2KNUghtia0wxH9fFN1k4FN6c3ou7QwdtWVofOjjCPVzhlY8sx8ajg6zj0G382LgiE0WIl3BiauVUChkqENhNjAhl+3SmDBsM6MorQxQ6HRqYe+Z1tNifnZ1rVp732VrH1/9pv5LEzov/y+eUDy2THvsS3Anmt/pIMePk0RHXRFamzam3R8=",
  "file_map": {},
  "names": [
    "main"
  ],
  "brillig_names": []
}
