tooling/nargo_cli/tests/snapshots/execution_success/global_array_rc_regression_8259/execute__tests__stdout.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stdout
---
[global_array_rc_regression_8259] Circuit output: [1, 0, 1]
